kubernetes/test-manifestes/kustomize/mediacenter/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediacenter
  namespace: mediacenter
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.local.krlab.tech`)
      kind: Rule
      services:
        - name: plex
          port: 32400
      middlewares:
        - name: default-headers
  tls:
    secretName: local-krlab-tech-tls
